<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".AddExpenseActivity">



    <!-- Back Button -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@null"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/dark_text" />

    <!-- Title -->
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_transaction"
        android:textColor="@color/dark_text"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"/>

    <!-- Date Picker -->
    <androidx.cardview.widget.CardView
        android:id="@+id/layoutDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginRight="80dp"
        app:cardBackgroundColor="#EEF1F8"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"

        app:contentPadding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintWidth_percent="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/btnPickDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pick_date"
                android:src="@drawable/ic_calendar"
                app:tint="#8F96AD" />

            <TextView
                android:id="@+id/txtSelectedDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:text="Thu 13 Mar 25"
                android:textColor="#5C6684"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Reset Date Button -->
    <androidx.cardview.widget.CardView
        android:id="@+id/btnResetDate"
        android:layout_width="60dp"
        android:layout_height="0dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="#EEF1F8"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="@id/layoutDate"
        app:layout_constraintBottom_toBottomOf="@id/layoutDate"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        app:contentPadding="1dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_reset"
            android:contentDescription="@string/reset_date"
            app:tint="#8F96AD"/>
    </androidx.cardview.widget.CardView>

    <!-- Expense / Income Toggle -->
    <LinearLayout
        android:id="@+id/layoutToggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutDate">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExpense"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/expense"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#7A2417"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIncome"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/income"
            android:textColor="#8F96AD"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#EEF1F8"
            app:cornerRadius="10dp" />
    </LinearLayout>

    <!-- Amount Label -->
    <TextView
        android:id="@+id/amountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Amount"
        android:textColor="#333333"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutToggle" />

    <!-- Amount Input -->
    <androidx.cardview.widget.CardView
        android:id="@+id/layoutAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="#EEF1F8"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/amountLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:contentPadding="1dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@drawable/rounded_edittext_inline">

            <TextView
                android:id="@+id/currencySymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R"
                android:textColor="#5C6684"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="numberDecimal"
                android:textColor="#5C6684"
                android:textColorHint="#8F96AD"
                android:textSize="22sp" />

            <LinearLayout
                android:id="@+id/calculatorButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:gravity="center"
                        android:text="+"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:gravity="center"
                        android:text="−"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:gravity="center"
                        android:text="×"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:gravity="center"
                        android:text="="
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Name Label -->
    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Name"
        android:textColor="#333333"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutAmount" />

    <!-- Name Input -->
    <androidx.cardview.widget.CardView
        android:id="@+id/layoutName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="#EEF1F8"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/nameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:contentPadding="1dp"
        >

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/rounded_edittext_inline"
            android:padding="16dp"
            android:textColor="#5C6684"
            android:textColorHint="#8F96AD"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <!-- Description Label -->
    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Description"
        android:textColor="#333333"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutName" />

    <!-- Description Input -->
    <androidx.cardview.widget.CardView
        android:id="@+id/layoutDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="#EEF1F8"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:contentPadding="1dp"
        >

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/rounded_edittext_inline"
            android:gravity="top"
            android:minHeight="50dp"
            android:padding="16dp"
            android:textColor="#5C6684"
            android:textColorHint="#8F96AD"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <!-- Category Label -->
    <TextView
        android:id="@+id/categoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Category"
        android:textColor="#333333"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutDescription" />

    <!-- Category Spinner -->
    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_input"
        app:layout_constraintTop_toBottomOf="@id/categoryLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Bottom Layout with Photo and Create buttons -->
    <LinearLayout
        android:id="@+id/bottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp">

        <!-- Pick Photo Button -->
        <androidx.cardview.widget.CardView
            android:id="@+id/btnPickPhoto"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="#EEF1F8"
            app:cardElevation="0dp"
            app:contentPadding="1dp"
            >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera"
                app:tint="#8F96AD"/>
        </androidx.cardview.widget.CardView>

        <!-- Create Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:text="Create"
            android:textSize="20sp"
            app:cornerRadius="16dp"
            app:backgroundTint="#334DA3"
            android:textColor="@color/white"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>